# mir_perception_models

./: README.md
mir_pointcloud_object_recognition_models/: CMakeLists.txt  package.xml
mir_pointcloud_object_recognition_models/common/models/dgcnn/: README.md
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp/models/: resuts.csv
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp_2048/models/: resuts.csv
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp_88/models/: resuts.csv
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp_90_percent/models/: resuts.csv
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp_91/models/: resuts.csv
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp_poor/models/: resuts.csv
mir_pointcloud_object_recognition_models/common/models/dgcnn/all/public_b_it_bot_work_3d_perception_dgcnn_checkpoints/exp_with_jitter_250/models/: resuts.csv
mir_rgb_object_recognition_models/: CMakeLists.txt  package.xml
mir_rgb_object_recognition_models/common/models/yolov5/: dataset_readme.md
mir_rgb_object_recognition_models/common/models/yolov5/summer_competition_22_dataset/: dataset_readme.md
(+2 files in other folders)
